syntax = "proto3";

package metro;

import "loco.proto";

service Router {
    rpc Start (StartRequest) returns (Status) {};
    rpc Link (LinkRequest) returns (Status) {};
    rpc Block (BlockRequest) returns (Status) {};
    rpc Transmit (TransmitRequest) returns (Status) {};
    rpc Listen (Token) returns (stream Signal) {};
}

message Token {
    // container id
    string id = 1;
}

message LinkRequest {
    Token token = 1;
    // required(id, name)
    Station src = 2;
    // required(name, image)
    Station dst = 3;
    string message = 4;
}

message BlockRequest {
    Token token = 1;
    // required(id, name)
    Station src = 2;
    // required(name, image)
    Station dst = 3;
    string message = 4;
}

message TransmitRequest {
    Token token = 1;
    // required(id, name)
    Station src = 2;
    // required(name, image)
    Station dst = 3;
    string message = 4;
}

// required                 src dst msg
// for control=START,        n   y   n
// for control=LINKED,       y   y   n
// for control=MESSAGE       y   y   o
message Signal {
    // required(id, name, image)
    Station src = 2;
    // required(id, name, image)
    Station dst = 3;
    string message = 4;
    enum Control {
        NOT_USED = 0;
        START = 1;
        TERMINATE = 2;
        LINKED = 3;
        MESSAGE = 4;
        BLOCKED = 5;
    }
    Control control = 5;
}